syntax = "proto3";
package petri.liquidity.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/petrichormoney/petri/x/liquidity/types";
option (gogoproto.goproto_getters_all) = false;

// Params defines the parameters for the liquidity module.
message Params {}

// Params defines the parameters for the liquidity module.
message GenericParams {
    uint64 batch_size = 1;

    uint64 tick_precision = 2;
  
    string fee_collector_address = 3;
  
    string dust_collector_address = 4;

    string min_initial_pool_coin_supply = 5
        [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];

    repeated cosmos.base.v1beta1.Coin pair_creation_fee = 6
        [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];

    repeated cosmos.base.v1beta1.Coin pool_creation_fee = 7
        [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];

    string min_initial_deposit_amount = 8
        [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];

    string max_price_limit_ratio = 9
        [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];

    google.protobuf.Duration max_order_lifespan = 10 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
 
    string swap_fee_rate = 11
        [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];

    string withdraw_fee_rate = 12
        [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  
    uint64 deposit_extra_gas = 13
        [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Gas", (gogoproto.nullable) = false];
  
    uint64 withdraw_extra_gas = 14
        [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Gas", (gogoproto.nullable) = false];
  
    uint64 order_extra_gas = 15
        [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Gas", (gogoproto.nullable) = false];
    
    string swap_fee_distr_denom = 16;

    string swap_fee_burn_rate = 17
        [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
    
    uint64 app_id = 18;
}